fix spacing in info list

--- a/public/index.css
+++ b/public/index.css
@@ -877,6 +877,12 @@ button {
     margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
+  .xl\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
   .xl\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
